Sat Mar 21 22:38:35 1998  Laurent Pautet  <pautet@paris.act-europe.fr>

	* xe_utils.adb: Don't include GARLIC as Ada library.

	* xe_usage.adb: Update usage.

	* xe_stubs.adb: Rename object file when RCI spec and body file
 	name are different (gnat.adc).

1998-03-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.ads, xe_utils.adb: Add Dir to build concatenate several
 	strings and name_ids with directory separator in between. Change
 	way of handling time stamps. Remove some variables that were not
	very usefull.

	* xe_stubs.adb: Store configuration and executable file stamps
 	into glade.sta. Use XE_Utils.Dir. Add several procedures to help
 	the partition main subprogram generation. Same for elaboration
 	package body. Use of new unit System.Partition_Interface.Startup.

	* xe_back.ads, xe_back.adb: Remove Load_All_Units (no longer
	used).

	* xe_check.adb: Improve recompilation mode especially to handle
 	non regular filenames (from gnat.adc). Use the fact that u%[bs]
 	info contains the index into Unit table. Load distributed
 	application main subprogram first to take into account gnat.adc
 	informations using main subprogram ali. Use XE_Utils.Dir.

	* xe_parse.adb, xe_stdcnf.adb: Use XE_Utils.Dir.

1998-03-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Some units are explicitly loaded (comes from
 	configuration file). If its library is a readonly library, it
 	won't be loaded by gnatmake. So, we have to load this library
 	ourself in the ALI table.

1998-03-09  Laurent Pautet  <pautet@scapin.enst.fr>

        * xe_utils.adb: Use Scan_Make_Arg from Make unit. Re-organize
        Initialize to use a copy of Make.Initialize which includes
        -A<GARLIC> flag.

        * xe_build.adb: Re-organize code because of changes above.

1998-03-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* config.sdefault: Change output when argument is pathtolib. This
	script is used now in several cases in GARLIC.
